--- a/com.wilckerson.native_ui/plugin.xml
+++ b/com.wilckerson.native_ui/plugin.xml
@@ -56,5 +56,6 @@
         <source-file src="src/android/NativeUI.java" target-dir="src/com/wilckerson/native_ui" />
         <source-file src="src/android/NativeUIMapper.java" target-dir="src/com/wilckerson/native_ui" />
         <source-file src="src/android/NativeUIButton.java" target-dir="src/com/wilckerson/native_ui" />
+        <source-file src="src/android/NativeUIPage.java" target-dir="src/com/wilckerson/native_ui" />
     </platform>
 </plugin>
