ïmplementando o welcomeDemo. Testando melhor forma de relacionar a elemento nativo e o NativeUIControl

--- a/com.wilckerson.native_ui/plugin.xml
+++ b/com.wilckerson.native_ui/plugin.xml
@@ -57,5 +57,7 @@
         <source-file src="src/android/NativeUIMapper.java" target-dir="src/com/wilckerson/native_ui" />
         <source-file src="src/android/NativeUIButton.java" target-dir="src/com/wilckerson/native_ui" />
         <source-file src="src/android/NativeUIPage.java" target-dir="src/com/wilckerson/native_ui" />
+        <source-file src="src/android/NativeUIText.java" target-dir="src/com/wilckerson/native_ui" />
+        <source-file src="src/android/NativeUITextBox.java" target-dir="src/com/wilckerson/native_ui" />
     </platform>
 </plugin>
